syntax = "proto3";

package home.app.grpc;

import "contact_message.proto";

option java_multiple_files = true;

message ServiceMessage {
  int64 id = 1;
  string administrator = 2;
  string name = 3;
  ContactMessage contact = 4;
}
